--- a/usr/share/aat/Translations/pt.po
+++ b/usr/share/aat/Translations/pt.po
@@ -217,6 +217,18 @@ msgstr "Arquivo de Configuração"
 msgid "_DASHBOARD"
 msgstr "Painel de Controle"
 
+msgid "_DATASOURCE"
+msgstr "_DATASOURCE"
+
+msgid "_DATASOURCES"
+msgstr "_DATASOURCES"
+
+msgid "_DATASOURCE_VALUE"
+msgstr "_DATASOURCE_VALUE"
+
+msgid "_DATASOURCES_VALUE"
+msgstr "_DATASOURCES_VALUE"
+
 msgid "_DELETE"
 msgstr "Deleta"
 
@@ -247,14 +259,23 @@ msgstr "Icones e texto"
 msgid "_ICONS_ONLY"
 msgstr "Icones Somente"
 
+msgid "_INFORMATION"
+msgstr "_INFORMATION"
+
 msgid "_KEY"
 msgstr "Chave"
+
+msgid "_LABEL"
+msgstr "_LABEL"
 
 msgid "_LOGOUT"
 msgstr "Logout"
 
 msgid "_MENU_DISPLAY"
 msgstr "Exibicao do Menu"
+
+msgid "_MODIFICATION"
+msgstr "_MODIFICATION"
 
 msgid "_MODIFY"
 msgstr "Modifica"
@@ -391,6 +412,9 @@ msgstr "Nome"
 msgid "_NB"
 msgstr "Numero"
 
+msgid "_NB_ITEMS"
+msgstr "_NB_ITEMS"
+
 msgid "_NEW_PASSWORD"
 msgstr "Nova Senha"
 
@@ -474,6 +498,12 @@ msgstr "Alertas"
 
 msgid "_ALERTS_VIEWER"
 msgstr "Visualizador de Alertas"
+
+msgid "_AUTHENTICATION"
+msgstr "_AUTHENTICATION"
+
+msgid "_BACK"
+msgstr "_BACK"
 
 msgid "_BASE"
 msgstr "Base"
@@ -583,6 +613,9 @@ msgstr "Graph Type"
 msgid "_GRAPH_WIDTH"
 msgstr "Largura do Gráfico"
 
+msgid "_GRAPH_Y_LABEL"
+msgstr "_GRAPH_Y_LABEL"
+
 msgid "_GROUP_NAME"
 msgstr "Nome do Grupo"
 
@@ -615,6 +648,9 @@ msgstr "Log"
 
 msgid "_LOG_LEVEL"
 msgstr "Nível de Log"
+
+ "_LOG_REGEXP"
+msgstr "_LOG_REGEXP"
 
 msgid "_LOG_TYPE"
 msgstr "Tipo de Log"
@@ -667,6 +703,9 @@ msgstr "Mensagens Nb"
 msgid "_NB_REPORTS"
 msgstr "Relatórios Nb"
 
+msgid "_NEGATE"
+msgstr "_NEGATE"
+
 msgid "_NEW_ALERT"
 msgstr "Novo Alerta"
 
@@ -711,6 +750,9 @@ msgstr "Novo Serviço"
 
 msgid "_NEW_SERVICEGROUP"
 msgstr "Novo Grupo de Servicos"
+
+msgid "_NEW_STATIC_ALERT"
+msgstr "_NEW_STATIC_ALERT"
 
 msgid "_NEW_STATIC_DEVICEGROUP"
 msgstr "Novo Grupo de Dispositivos Estático"
@@ -757,6 +799,9 @@ msgstr "Período"
 msgid "_PERIODS"
 msgstr "Períodos"
 
+msgid "_PERL_FUNCTION"
+msgstr "_PERL_FUNCTION"
+
 msgid "_PROCESSOR"
 msgstr "Processador"
 
@@ -768,6 +813,9 @@ msgstr "Rack"
 
 msgid "_RANK"
 msgstr "Rank"
+
+msgid "_REAL_TIME_LOGS_VIEWER"
+msgstr "_REAL_TIME_LOGS_VIEWER"
 
 msgid "_REGEXP_EXC"
 msgstr "Regexp (Excl.)"
@@ -808,14 +856,29 @@ msgstr "Edição de Relatório"
 msgid "_REPORT_FIELDS_ORDER"
 msgstr "Pedido de Campos Para o Relatorio"
 
+msgid "_REPORT_FILE_DOESNT_EXIST"
+msgstr "_REPORT_FILE_DOESNT_EXIST"
+
 msgid "_REPORT_HTML"
 msgstr "Formato do Relatório HTML"
+
+msgid "_REPORT_IN_PROGRESS"
+msgstr "_REPORT_IN_PROGRESS"
 
 msgid "_REPORT_NAME"
 msgstr "Nome do Relatório"
 
+msgid "_REPORT_OFC"
+msgstr "_REPORT_OFC"
+
 msgid "_REPORT_PDF"
 msgstr "Relatorio em PDF"
+
+msgid "_REPORT_RRD_GRAPH"
+msgstr "_REPORT_RRD_GRAPH"
+
+msgid "_REPORT_RRD_GRAPH_CREATION"
+msgstr "_REPORT_RRD_GRAPH_CREATION"
 
 msgid "_REPORT_SCHEDULER"
 msgstr "Agendador de Relatórios"
@@ -841,6 +904,12 @@ msgstr "Papel"
 msgid "_ROOM"
 msgstr "Sala"
 
+msgid "_ROTATE_LEFT"
+msgstr "_ROTATE_LEFT"
+
+msgid "_ROTATE_RIGHT"
+msgstr "_ROTATE_RIGHT"
+
 msgid "_RUNNING_REPORTS"
 msgstr "Relatorios em Execucao"
 
@@ -852,6 +921,9 @@ msgstr "Agendar"
 
 msgid "_SCHEDULE_REPORT"
 msgstr "Relatório de Agenda"
+
+msgid "_SCHEDULE_STATISTIC_REPORT"
+msgstr "_SCHEDULE_STATISTIC_REPORT"
 
 msgid "_SCHEDULER"
 msgstr "Agenda"
@@ -886,6 +958,12 @@ msgstr "Serviços"
 msgid "_SERVICES_UPDATES"
 msgstr "Atualização de Serviços"
 
+msgid "_SOURCE"
+msgstr "_SOURCE"
+
+msgid "_SHOW_DIFF"
+msgstr "_SHOW_DIFF"
+
 msgid "_START"
 msgstr "Iniciar"
 
@@ -901,8 +979,17 @@ msgstr "Estado"
 msgid "_STATIC"
 msgstr "Estático"
 
+msgid "_STATIC_ALERT_CONFIGURATION"
+msgstr "_STATIC_ALERT_CONFIGURATION"
+
 msgid "_STATISTICS"
 msgstr "_STATISTIC"
+
+msgid "_STATISTIC_REPORT_EDITION"
+msgstr "_STATISTIC_REPORT_EDITION"
+
+msgid "_STATISTIC_REPORT_SCHEDULER"
+msgstr "_STATISTIC_REPORT_SCHEDULER"
 
 msgid "_STATISTIC_REPORTS"
 msgstr "Relatório de Estatísticas"
@@ -918,6 +1005,9 @@ msgstr "Solicitar Suporte"
 
 msgid "_SWAP_USAGE"
 msgstr "Uso de Swap"
+
+msgid "_SYSLOG_OUTPUT"
+msgstr "_SYSLOG_OUTPUT"
 
 msgid "_SYSTEM_CONFIG"
 msgstr "Configuração do Sistema"
@@ -949,6 +1039,9 @@ msgstr "Aguardando Informação"
 msgid "_TICKET_WORK_PROGRESS"
 msgstr "Em Progresso"
 
+msgid "_TIMELINE"
+msgstr "_TIMELINE"
+
 msgid "_TIMEPERIOD"
 msgstr "Período de Tempo"
 
@@ -957,6 +1050,9 @@ msgstr "Nome do Período de Tempo"
 
 msgid "_TIMEPERIODS"
 msgstr "Períodos de Tempo"
+
+msgid "_TIMESTEP"
+msgstr "_TIMESTEP"
 
 msgid "_UNKNOWN_MSGS"
 msgstr "Mensagens Desconhecidas"
@@ -978,6 +1074,21 @@ msgstr "Servidor de Usuários"
 
 msgid "_WORLD_STATISTICS"
 msgstr "Estatisticas do Ano"
+
+msgid "_ZABBIX_HOST_DEFINED"
+msgstr "_ZABBIX_HOST_DEFINED"
+
+msgid "_ZABBIX_SERVER"
+msgstr "_ZABBIX_SERVER"
+
+msgid "_ZABBIX_ITEM_DEFINED"
+msgstr "_ZABBIX_ITEM_DEFINED"
+
+msgid "_ZOOM_IN"
+msgstr "_ZOOM_IN"
+
+msgid "_ZOOM_OUT"
+msgstr "_ZOOM_OUT"
 
 msgid "_DLG_DELETE_ALERT"
 msgstr "Voce quer apagar o Alerta '%%arg1%%' ?"
@@ -1093,6 +1204,12 @@ msgstr "Para qualquer coisa além disto, me contate em octo.devel@gmail.com"
 msgid "_MSG_DYNAMIC_ALERT_CREATION"
 msgstr "Criação de Alerta Dinâmico"
 
+msgid "_MSG_EXTRACT_PROGRESS_DATA"
+msgstr "_MSG_EXTRACT_PROGRESS_DATA"
+
+msgid "_MSG_EXTRACT_PROGRESS_LISTING_FILES"
+msgstr "_MSG_EXTRACT_PROGRESS_LISTING_FILES"
+
 msgid "_MSG_FIELD_DONT_EXIST"
 msgstr "Campo não existe !"
 
@@ -1113,6 +1230,9 @@ msgstr "Para maiores informações sobre criação de Mapas, visite o Octopussy 
 
 msgid "_MSG_MSGID_ALREADY_EXISTS"
 msgstr "ID de Mensagem já existente !"
+
+msgid "_MSG_MSGID_CANT_BE_NULL"
+msgstr "_MSG_MSGID_CANT_BE_NULL"
 
 msgid "_MSG_MSGS_FOR_SERVICE"
 msgstr "Mensagens para o Serviço %s (versão %s)"
@@ -1167,6 +1287,9 @@ msgstr "Pegando arquivos de dados..."
 
 msgid "_MSG_REPORT_PROGRESS_QUERYING_DB"
 msgstr "Consultando Banco de Dados..."
+
+msgid "_MSG_REPORT_PROGRESS_REPORT_CONFIG"
+msgstr "_MSG_REPORT_PROGRESS_REPORT_CONFIG"
 
 msgid "_MSG_RESTART_OCTOPUSSY"
 msgstr "Restart do Octopussy"
