--- a/changelog
+++ b/changelog
@@ -1,3 +1,24 @@
+octopussy (0.9.9.9.8); urgency=high
+
+  * A lot of work has been done to reduce memory usage (-40% for parsers)
+  * A huge Services & Tables update
+  * Faster Reports for Reports with Plugins
+  * Better octo_extractor (with Device, Service, Loglevel & Taxonomy validation)
+  * ProgressBar added for octo_reporter in command line
+  * Alerts are now sent by octo_sender instead of octo_parser
+  * Some little changes in Web Interface to improve speed 
+  * Translation files are now in .po format
+  * Huge Test Suite (280+ tests) has been created to reduce 'stupid bugs'
+  * Code cleaning
+ 
+  * Bugfix 2960273: Parses stops due some perl subs missing
+  * Bugfix SR 2967444: Device Models/Types problem
+  * Bugfix: Wizard title with '[]' problem
+  * Bugfix 2976415: Cisco_Pix Service problem
+  * Bugfix 2991712: Device hasn't send any logs every 2 seconds
+ 
+  -- Sebastien Thebert <octo.devel@gmail.com>  Fri, 04 Jun 2010 19:00
+
 octopussy (0.9.9.9.6); urgency=high
 
   * Bugfix: 'undefined value within %re_type or %color in Message.pm' messages
