Alerts name are now limited to [-_a-zA-Z0-9] characters packaging_svn2debian.pl renamed in packaging_from_svn.pl

--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+octopussy (1.0rc1); urgency=high
+
+  * Bugfix 3061992: %LOGIN% missing in Octopussy logs
+
+  -- Sebastien Thebert <octo.devel@gmail.com>  XXX, XX Sep 2010 XX:00
+
 octopussy (0.9.9.9.9); urgency=high
 
   * Bugfix in octo_scheduler
